# KSDM2040_baremetal

./: CMakeLists.txt  KSDM_2040_BM.c  README.md
